other/sync-secrets/.chainsaw-test/chainsaw-step-02-apply-1.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: regcred
  namespace: default
