other/sync-secrets/.chainsaw-test/chainsaw-step-04-apply-1.yaml
apiVersion: v1
data:
  bar: Zm9v
kind: Secret
metadata:
  name: regcred
  namespace: default
