other/sync-secrets/.chainsaw-test/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sync-secrets-ns01
