other/sync-secrets/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: sync-secrets
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
