other/sync-secrets/.chainsaw-test/secret-generated.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: regcred
  namespace: sync-secrets-ns01
