other/sync-secrets/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: sync-secrets
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../sync-secrets.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: chainsaw-step-02-apply-1.yaml
  - name: step-03
    try:
    - apply:
        file: ns.yaml
    - assert:
        file: secret-generated.yaml
  - name: step-04
    try:
    - apply:
        file: chainsaw-step-04-apply-1.yaml
    - assert:
        file: chainsaw-step-04-assert-1.yaml
